--- a/blocks/page-title/page-title.css
+++ b/blocks/page-title/page-title.css
@@ -3,6 +3,6 @@
   background-color: #292929;
   padding: 47px 15px 45px;
   text-align: center;
-  background-image: url('https://smartdata.tonytemplates.com/car-repair-service-v4/car2/wp-content/uploads/sites/6/2020/04/slide-new1.jpg');
-  background-position: 0 45%;
+  background-image: url('../../images/header-photo-bg.jpeg');
+  background-position: 20% 45%;
 }
