--- a/blocks/text/_style/_regular-paragraph/text_style_regular-paragraph.css
+++ b/blocks/text/_style/_regular-paragraph/text_style_regular-paragraph.css
@@ -1,6 +1,8 @@
 .text_style_regular-paragraph {
+  margin: 0;
   font-size: 16px;
   line-height: 25px;
+  color: #292929;
 }
 
 @media screen and (max-width:768px) {
