--- a/blocks/aside-menu/__link/aside-menu__link.css
+++ b/blocks/aside-menu/__link/aside-menu__link.css
@@ -1,5 +1,11 @@
 .aside-menu__link {
-
+  display: block;
+  padding: 20px 10px 20px 45px;
   text-decoration: none;
+  color: #5e5e5e
+}
 
+.aside-menu__link:hover {
+  color: inherit;
+  cursor: pointer;
 }
