--- a/blocks/footer/paragraph/_ticked/footer__paragraph_ticked.css
+++ b/blocks/footer/paragraph/_ticked/footer__paragraph_ticked.css
@@ -1,5 +1,6 @@
 .footer__paragraph_ticked {
-  padding: 10px 0 0 25px;
+  color: #d4d4d4;
+  padding: 0px 0 7px 25px;
 }
 
 @media screen and (max-width:768px) {
