--- a/blocks/footer/paragraph/footer__paragraph.css
+++ b/blocks/footer/paragraph/footer__paragraph.css
@@ -1,7 +1,7 @@
 .footer__paragraph {
   margin: 0;
   padding: 10px 0 0;
-  color: white;
+  color: #d4d4d4;
 }
 
 @media screen and (max-width:768px) {
