--- a/blocks/header/__address/header__address.css
+++ b/blocks/header/__address/header__address.css
@@ -7,19 +7,10 @@
 
 .header__address:hover {
   cursor: pointer;
+  color: white;
 }
 
 .header__address::before {
-  content: '';
-  position: absolute;
-  left: 0;
-  width: 25px;
-  height: 25px;
-  -webkit-mask-size: 100%;
-  mask-size: 100%;
-  -webkit-mask-repeat: no-repeat;
-  mask-repeat: no-repeat;
-  background-color: white;
   -webkit-mask-image: url('../../../images/location-3-svgrepo-com.svg');
   mask-image: url('../../../images/location-3-svgrepo-com.svg');
 }
