--- a/blocks/header/__hours/header__hours.css
+++ b/blocks/header/__hours/header__hours.css
@@ -1,22 +1,15 @@
 .header__hours {
-
   margin: 0;
   padding-left: 40px;
   color: inherit;
   position: relative;
 }
 
+.header__hours:hover {
+  color: white;
+}
+
 .header__hours::before {
-  content: '';
-  position: absolute;
-  left: 0;
-  width: 25px;
-  height: 25px;
-  -webkit-mask-size: 100%;
-  mask-size: 100%;
-  -webkit-mask-repeat: no-repeat;
-  mask-repeat: no-repeat;
-  background-color: white;
   -webkit-mask-image: url('../../../images/clock-svgrepo-com.svg');
   mask-image: url('../../../images/clock-svgrepo-com.svg');
 }
