--- a/blocks/header/__tel/header__tel.css
+++ b/blocks/header/__tel/header__tel.css
@@ -1,5 +1,4 @@
 .header__tel {
-
   color: inherit;
   display: block;
   padding-left: 40px;
@@ -8,19 +7,10 @@
 
 .header__tel:hover {
   cursor: pointer;
+  color: white;
 }
 
 .header__tel::before {
-  content: '';
-  position: absolute;
-  left: 0;
-  width: 25px;
-  height: 25px;
-  -webkit-mask-size: 100%;
-  mask-size: 100%;
-  -webkit-mask-repeat: no-repeat;
-  mask-repeat: no-repeat;
-  background-color: white;
   -webkit-mask-image: url('../../../images/call-cell-communication-phone-ring-talk.svg');
   mask-image: url('../../../images/call-cell-communication-phone-ring-talk.svg');
 }
