--- a/blocks/text/_style/_subtitle/text_style_subtitle.css
+++ b/blocks/text/_style/_subtitle/text_style_subtitle.css
@@ -1,7 +1,10 @@
 .text_style_subtitle {
+  margin: 0;
+  padding: 0;
   font-size: 24px;
   line-height: 34px;
   font-weight: 600;
+  color: #292929;
 }
 
 @media screen and (max-width:768px) {
