--- a/blocks/text/_style/_title/text_style_title.css
+++ b/blocks/text/_style/_title/text_style_title.css
@@ -1,7 +1,10 @@
 .text_style_title {
+  margin: 0;
+  padding: 0;
   font-size: 44px;
   line-height: 50px;
   font-weight: 700;
+  color: #292929;
 }
 
 @media screen and (max-width:768px) {
