--- a/blocks/news/__paragraph/news__paragraph.css
+++ b/blocks/news/__paragraph/news__paragraph.css
@@ -1,8 +1,8 @@
 .news__paragraph {
   margin: 0;
-  padding: 5px;
+  padding: 12px 0 16px;
   line-height: 18px;
-  max-height: 95px;
+  color: #5e5e5e;
   text-overflow: ellipsis;
   overflow: hidden;
   word-break: break-word;
