--- a/blocks/preloader/preloader.css
+++ b/blocks/preloader/preloader.css
@@ -10,4 +10,7 @@
   background: rgba(0, 0, 0, .8);
   /* размещаем блок над всеми элементами на странице (это значение должно быть больше, чем у любого другого позиционированного элемента на странице) */
   z-index: 10;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
