--- a/blocks/provide/__service-description/provide__service-description.css
+++ b/blocks/provide/__service-description/provide__service-description.css
@@ -1,6 +1,6 @@
 .provide__service-description {
   box-sizing: border-box;
-  padding: 20px;
+  padding: 20px 30px 20px 60px;
   background-color: #393939;
   display: flex;
   gap: 10px;
